# fhir_store

./: Cargo.toml  README.md  example.json  package-lock.json  package.json
.github/workflows/: pass.yml
src/: datatypes.rs  error.rs  lib.rs  parser_2.rs
src/data/: datatype.rs  mod.rs  resource_reader.rs  tree.rs
src/datatypes/: id.rs  mod.rs
src/parser/: datetime.rs  json.rs  jsonparser.rs  lengths.rs  mod.rs  stacks.rs
src/resources/: mod.rs  resource_reader.rs
src/resourcetypes/: mod.rs
src/store/: bufreader.rs  header.rs  memory.rs  mod.rs  resource.rs  resourcewriter.rs  store.rs  writer.rs
test_data/: general_person_example_bytes.txt
