[package]
name = "fhir_store"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tiny_http = "0.12.0"
phf = { version = "0.11", features = ["macros"] }
uuid = {version = "1.3.3", features = ["v4"] }
indexmap = "1.9.3"
chrono = "0.4.26"
fast-float = "0.2.0"
